# based-op

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  config.yml  config_maxgas.yml  config_multiple_gateways.yml  follower-node-config.yml  local-config.yml
.github/workflows/: lint.yml
assets/: rollup.json  state.json
based/: Cargo.toml  Dockerfile  gateway.Dockerfile  gateways.example.json  justfile  portal.Dockerfile  registry.Dockerfile  rustfmt.toml  stats.md
based/crates/common/: Cargo.toml
based/crates/common/src/: actor.rs  api.rs  async.rs  communication.rs  config.rs  db.rs  lib.rs  p2p.rs  rpc.rs  runtime.rs  shared.rs  signing.rs  time.rs  utils.rs
based/crates/common/src/communication/: internal_message.rs  messages.rs  mod.rs  queue.rs  rpc_engine.rs  rpc_eth.rs  seqlock.rs  sequencer.rs  simulator.rs
based/crates/common/src/db/: error.rs  frag.rs  mod.rs  sorting.rs  state.rs
based/crates/common/src/time/: mod.rs  repeater.rs  timer.rs  types.rs  utils.rs
based/crates/common/src/time/types/: duration.rs  instant.rs  nanos.rs
based/crates/common/src/transaction/: mod.rs  tx_list.rs
based/crates/common/src/transaction/simulated/: mod.rs  transaction.rs  tx_list.rs
based/crates/db/: Cargo.toml
based/crates/db/examples/: db_init.rs
based/crates/db/src/: alloy_db.rs  block.rs  cache.rs  error.rs  init.rs  lib.rs  util.rs
based/crates/pool/: Cargo.toml
based/crates/pool/src/transaction/: active.rs  mod.rs  pool.rs
based/crates/rpc/: Cargo.toml
based/crates/rpc/src/: engine.rs  engine_mock.rs  eth.rs  gossiper.rs  lib.rs
based/crates/sequencer/: Cargo.toml
based/crates/sequencer/src/: built_frag.rs  config.rs  context.rs  frag.rs  lib.rs  simulator.rs  sorting.rs
based/crates/sequencer/src/block_sync/: block_fetcher.rs  fetch_blocks.rs  mock_fetcher.rs  mod.rs
based/crates/sequencer/src/sorting/: frag_sequence.rs  in_sort_frag.rs  mod.rs  sorting_data.rs
based/crates/simulator/: Cargo.toml
based/crates/simulator/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: utils.rs
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: get-started.md  introduction.md  overview.md  scaling.md
docs/docs/architecture/: consensus.md  execution.md  gateway.md  p2p.md  portal.md  timekeeper.md
docs/docs/getting_started/: connecting-a-wallet.md  develop.md  get-started.md  try-out.md
follower-node/: .env  compose.yml
follower-node/config/: rollup-2151908.json
follower-node/scripts/: setup.sh  start_op_geth.sh
op-geth/beacon/engine/: types.go
op-geth/core/: blockchain.go  blockchain_insert.go  blockchain_reader.go  state_processor.go  types.go
op-geth/core/types/: transaction.go  unsealed_block.go  unsealed_block_test.go
op-geth/eth/: api_backend.go
op-geth/eth/catalyst/: api.go  api_test.go
op-geth/internal/ethapi/: api.go  api_test.go  backend.go  transaction_args_test.go
optimism/: go.mod  go.sum
optimism-package/: README.md
optimism-package/.github/tests/: rollup-boost.yaml
optimism-package/src/: el_cl_launcher.star  l2.star  participant_network.star
optimism-package/src/cl/op-node/: op_node_builder_launcher.star  op_node_launcher.star
optimism-package/src/el/op-geth/: op_geth_launcher.star
optimism-package/src/el/op-reth/: op_reth_launcher.star
optimism-package/src/mev/based-portal/: based_portal_launcher.star
optimism-package/src/mev/gateway/: gateway_launcher.star
optimism-package/src/mev/registry/: registry_launcher.star
optimism-package/src/mev/rollup-boost/: rollup_boost_launcher.star
optimism-package/src/package_io/: constants.star  input_parser.star  sanity_check.star
optimism-package/static_files/registry/: registry.json.tmpl
optimism/op-e2e/actions/helpers/: l2_verifier.go
optimism/op-e2e/e2eutils/opnode/: tracer.go
optimism/op-node/: service.go
optimism/op-node/flags/: flags.go  p2p_flags.go
optimism/op-node/metrics/: metrics.go
optimism/op-node/node/: api.go  client.go  comms.go  config.go  node.go  runtime_config.go  server.go
optimism/op-node/p2p/: gossip.go  host_test.go  node.go  rpc_server.go
optimism/op-node/p2p/cli/: load_gateway.go
optimism/op-node/rollup/: types.go
optimism/op-node/rollup/driver/: driver.go  state.go
optimism/op-node/rollup/engine/: engine_controller.go  env_process.go  events.go  new_frag_process.go  preconf.go  preconf_test.go  seal_process.go
optimism/op-program/client/driver/: driver.go
optimism/op-program/client/l2/: engine.go
optimism/op-program/client/l2/engineapi/: l2_engine_api.go  l2_engine_api_test.go
optimism/op-service/eth/: ssz.go  ssz_test.go  types.go
optimism/op-service/sources/: engine_client.go  eth_client.go  registry_client.go  types.go
optimism/op-service/testutils/: runtime_config.go
optimism/op-wheel/engine/: version_provider.go
reth/crates/evm/src/system_calls/: mod.rs
reth/crates/node/core/src/args/: rpc_server.rs
reth/crates/optimism/chainspec/src/: lib.rs
reth/crates/optimism/primitives/: Cargo.toml
reth/crates/optimism/primitives/src/transaction/: mod.rs  signed.rs
reth/crates/rpc/rpc-api/src/: engine.rs
reth/crates/rpc/rpc-engine-api/src/: capabilities.rs  engine_api.rs
reth/crates/storage/provider/src/providers/: consistent_view.rs
reth/crates/storage/provider/src/providers/database/: provider.rs
scripts/: build-mux.sh  clean-kurtosis.sh  config.yml  logs-kurtosis.sh  run-kurtosis.sh
sepolia_genesis/: intent.toml  rollup.json  state.json
