[workspace]
members = ["crates/*", "bin/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
rust-version = "1.83.0"
edition = "2021"
repository = "https://github.com/gattaca-com/based-op"

[workspace.dependencies]
bop-common = { path = "crates/common" }

alloy-consensus = "0.9.2"
alloy-eips = "0.9.2"
alloy-primitives = "0.8.19"
alloy-rpc-types = "0.9.2"
op-alloy-rpc-types-engine = "0.9.6"

axum = "0.8.1"
tokio = "1.43.0"
reqwest = "0.12.12"

tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

serde = "1.0.217"
serde_json = "1.0.137"
toml = "0.8.19"

eyre = "0.6.12"
