[package]
name = "bop-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# alloy
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-rpc-types.workspace = true
alloy-rlp.workspace = true

alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-network.workspace = true

# op alloy
op-alloy-rpc-types-engine.workspace = true
op-alloy-consensus.workspace = true

#revm
revm-primitives.workspace = true

crossbeam-channel.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# serde
serde.workspace = true
thiserror.workspace = true
eyre.workspace = true
chrono.workspace = true
quanta.workspace = true
directories.workspace = true
shared_memory.workspace = true


jsonrpsee.workspace = true
core_affinity.workspace = true
signal-hook.workspace = true

rand.workspace = true
strum_macros.workspace = true

[dev-dependencies]
serde_json.workspace = true
