[package]
name = "bop-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# alloy
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-rpc-types.workspace = true
alloy-rlp.workspace = true

alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-network.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
alloy-transport-http.workspace = true

# op alloy
op-alloy-rpc-types-engine.workspace = true
op-alloy-consensus.workspace = true
op-alloy-network.workspace = true

#revm
revm-primitives.workspace = true
revm.workspace = true

reth-optimism-evm.workspace = true
reth-optimism-chainspec.workspace = true
reth-evm.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-optimism-primitives.workspace = true
reth-node-types.workspace = true
reth-db.workspace = true
reth-node-ethereum.workspace = true
reth-provider.workspace = true
reth-trie-common.workspace = true
reth-storage-api.workspace = true
reth-db-api.workspace = true
reth-chainspec.workspace = true
reth-storage-errors.workspace = true
crossbeam-channel.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
reth-optimism-node.workspace = true
reth-optimism-cli.workspace = true
reth-execution-errors.workspace = true
reth-optimism-consensus.workspace = true


# networking
reqwest.workspace = true
# serde
serde.workspace = true
thiserror.workspace = true
eyre.workspace = true
chrono.workspace = true
quanta.workspace = true
directories.workspace = true
shared_memory.workspace = true


jsonrpsee.workspace = true
core_affinity.workspace = true
signal-hook.workspace = true
parking_lot.workspace = true
moka.workspace = true

rand.workspace = true
strum_macros.workspace = true
paste.workspace = true
auto_impl.workspace = true
ethereum_ssz.workspace = true
ssz_types.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true


[dev-dependencies]
serde_json.workspace = true
