[package]
name = "bop-db"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
parking_lot.workspace = true
revm-primitives.workspace = true
thiserror.workspace = true
tracing.workspace = true
moka = "0.12.10"

# alloy
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
alloy-transport-http.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true
op-alloy-network.workspace = true

# revm
revm.workspace = true

# async
tokio.workspace = true

# Reth DB dpeendencies
reth-db = { path = "../../../reth/crates/storage/db" }
reth-storage-api = { path = "../../../reth/crates/storage/storage-api" }
reth-storage-errors = { path = "../../../reth/crates/storage/errors" }
reth-trie-common = { path = "../../../reth/crates/trie/common", features = [
    "test-utils",
] }
reth-provider = { path = "../../../reth/crates/storage/provider", features = [
    "test-utils",
] }
reth-chainspec = { path = "../../../reth/crates/chainspec" }
reth-db-api = { path = "../../../reth/crates/storage/db-api" }
reth-node-types = { path = "../../../reth/crates/node/types" }
reth-node-ethereum = { path = "../../../reth/crates/ethereum/node", features = [
    "test-utils",
] }

reqwest.workspace = true
