[package]
name = "bop-pool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bop-common.workspace = true
alloy-primitives.workspace = true
reth-optimism-primitives.workspace = true
reth-primitives-traits.workspace = true
alloy-consensus.workspace = true
tracing.workspace = true

# revm
revm-primitives.workspace = true
revm.workspace = true

# data structures
rustc-hash.workspace = true
