[package]
edition.workspace = true
name = "bop-pool"
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-consensus.workspace = true
alloy-primitives.workspace = true
bop-common.workspace = true
reth-optimism-primitives.workspace = true
reth-primitives-traits.workspace = true
revm.workspace = true
revm-primitives.workspace = true
rustc-hash.workspace = true
tracing.workspace = true
