[package]
name = "bop-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bop-common.workspace = true
alloy-primitives.workspace = true
op-alloy-rpc-types-engine.workspace = true
alloy-rpc-types.workspace = true

tokio.workspace = true
tracing.workspace = true

jsonrpsee.workspace = true
