[package]
name = "bop-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bop-common.workspace = true
alloy-primitives.workspace = true
op-alloy-rpc-types-engine.workspace = true
alloy-rpc-types.workspace = true
op-alloy-rpc-types.workspace = true
tokio.workspace = true
tracing.workspace = true
reth-optimism-primitives.workspace = true
reqwest = {workspace = true, features=["blocking"]}

jsonrpsee.workspace = true
serde_json.workspace = true
