[package]
edition.workspace = true
name = "bop-sequencer"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-transport-http.workspace = true
bop-common.workspace = true
bop-db.workspace = true
bop-pool.workspace = true
clap.workspace = true
crossbeam-channel.workspace = true
eyre.workspace = true
futures.workspace = true
op-alloy-consensus.workspace = true
op-alloy-network.workspace = true
op-alloy-rpc-types.workspace = true
op-alloy-rpc-types-engine.workspace = true
reqwest.workspace = true
reth-chainspec.workspace = true
reth-consensus.workspace = true
reth-db.workspace = true
reth-evm.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-consensus.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-forks.workspace = true
reth-optimism-primitives.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-trie-common.workspace = true
revm.workspace = true
revm-primitives.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[[bin]]
name = "bulk-insert-headers"
path = "bin/bulk_insert_headers.rs"
