[package]
name = "bop-simulator"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
bop-common.workspace = true
revm-primitives.workspace = true
revm.workspace = true

tracing.workspace = true

thiserror.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-chainspec.workspace = true
reth-evm.workspace = true


