[package]
name = "bop-simulator"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
alloy-consensus.workspace = true
bop-common.workspace = true
revm-primitives.workspace = true
revm.workspace = true

tracing.workspace = true

thiserror.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-chainspec.workspace = true
reth-evm.workspace = true
reth-optimism-forks.workspace = true
reth-chainspec.workspace = true
reth-optimism-primitives.workspace = true
